<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Defend the Core</string>
    <string name="shop_money">Money: %1$d</string>
    <string name="shop_level">(Lvl %1$d)</string>
    <string name="shop_cost">Cost: %1$d</string>
    <string name="shop_current_health">Current: %1$d</string>
    <string name="shop_next_health">Next: %1$d</string>
    <string name="shop_current_damage">Current: %1$d</string>
    <string name="shop_next_damage">Next: %1$d</string>
    <string name="shop_current_fire_rate">Current: %1$.2f/s</string>
    <string name="shop_next_fire_rate">Next: %1$.2f/s</string>
    <string name="shop_current_damage_resistance">Current: %1$.0f%%</string>
    <string name="shop_next_damage_resistance">Next: %1$.0f%%</string>
    <string name="shop_current_money_multiplier">Current: %1$.1fx</string>
    <string name="shop_next_money_multiplier">Next: %1$.1fx</string>
    <string name="start_wave">Start Wave %1$d</string>

    <string name="shop_label_money_placeholder">Money: ---</string>
    <string name="shop_title_core_health">Core Health</string>
    <string name="shop_label_level_placeholder" tools:ignore="TypographyDashes">(Lvl --)</string>
    <string name="shop_label_current_placeholder">Current: ---</string>
    <string name="shop_label_next_placeholder">Next: ---</string>
    <string name="shop_button_buy">Buy</string>
    <string name="shop_label_cost_placeholder">Cost: ---</string>
    <string name="shop_title_turret_damage">Turret Damage</string>
    <string name="shop_title_fire_rate">Fire Rate</string>
    <string name="shop_title_dmg_resistance">Dmg. Resistance</string>
    <string name="shop_title_money_gain">Money Gain</string>

    <!-- Heal -->
    <string name="shop_title_heal">Heal Core</string>
    <string name="shop_button_heal">Heal</string>
    <string name="shop_heal_cost">Cost: %1$d</string>
    <string name="shop_heal_at_full_health">At full health</string>

    <!-- Lifesteal -->
    <string name="shop_title_lifesteal">Lifesteal</string>
    <string name="shop_current_lifesteal">Current: %1$.0f%%</string>
    <string name="shop_next_lifesteal">Next: %1$.0f%%</string>

    <!-- Crit Chance -->
    <string name="shop_title_crit_chance">Crit Chance</string>
    <string name="shop_current_crit_chance">Current: %1$.0f%%</string>
    <string name="shop_next_crit_chance">Next: %1$.0f%%</string>

    <!-- Crit Damage -->
    <string name="shop_title_crit_damage">Crit Damage</string>
    <string name="shop_current_crit_damage">Current: %1$.2fx</string>
    <string name="shop_next_crit_damage">Next: %1$.2fx</string>
    <string name="new_game">New Game</string>
</resources>